<resources>
    <string name="app_name">tinder-roush</string>
    <string name="title_activity_onboarding">OnboardingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Server-->
    <string name="server">https://roush.loducode.com</string>

    <!--Errors-->
    <string name="password_dont_match">Las contraseñas no coinciden</string>
    <string name="message_empty_field">Campo vacío</string>
    <string name="message_empty_field_city">Campo ciudad vacío</string>

    <!--Strings Onboarding-->
    <string name="Title_onboarding1">Haz nuevos amigos</string>
    <string name="Txt_onboarding1">y encuentra a quien se ha cruzado en tu camino</string>
    <string name="Title_onboarding2">Conecta</string>
    <string name="Txt_onboarding2">con las personas que se ajusten a tu perfil</string>
    <string name="Title_onboarding3">Da el primer paso</string>
    <string name="Txt_onboarding3">y comienza a conocer a esa persona</string>

    <!--Strings Login-->
    <string name="greet_login">Bienvenid@</string>
    <string name="greet_login2">Inicia sesión en tu cuenta</string>
    <string name="hint1">Ingresa tu nombre de usuario</string>
    <string name="hint2">Ingresa tu contraseña</string>
    <string name="Login">Iniciar sesión</string>
    <string name="forgot_password_link"><u>¿Olvidaste tu contraseña?</u></string>
    <string name="dont_have_an_account">¿Aún no tienes cuenta?</string>
    <string name="make_account">Crear cuenta</string>
    <string name="terms">Terminos de uso</string>
    <string name="politics">Política de privacidad</string>

    <!--Strings Home_match-->
    <string name="match_header"><b>Descubrir</b></string>
    <string name="match_city">Bogotá, CO</string>
    <string name="success_match">¡Wohoo! lo lograste..</string>
    <string name="success_match_sub">Ahora es momento de empezar a hablar con ...</string>
    <string name="button_chat">Quiero saludarl@</string>
    <string name="button_later">Más tarde</string>

    <string name="no_users">Lo sentimos no hay más usuarios disponibles</string>

    <!--Strings Filters-->
    <string name="see_filter">Vista por:</string>
    <string name="person_filter">Persona</string>
    <string name="map_filter">Mapa</string>
    <string name="save_filters">Guardar cambios</string>
    <string name="you_are_here">Estás aquí...</string>
    <string name="clear_filters">Borrar filtros</string>
    <string name="distance_filter">Rango distancia que quiero ver</string>
    <string name="gender_preference_filter"><b>Preferencia de género</b></string>
    <string name="want_to_see"><b>Quiero visualizar por...</b></string>

    <!--Strings Likes-->
    <string name="like_title">Me gusta</string>
    <string name="given_likes">Dados</string>
    <string name="received_likes">Recibidos</string>
    <string name="your_given_likes">Le diste me gusta a</string>
    <string name="your_received_likes">te dió me gusta</string>

    <!--Strings Chats-->
    <string name="title_chats"><b>Chats</b></string>
    <string name="messages"><b>Mensajes</b></string>
    <string name="search_hint">Buscar por nombre</string>
    <string name="name">Nombre</string>
    <string name="message_send">Escribe tu mensaje</string>

    <!--Strings Profile Other User-->
    <string name="heterosexual"><b>Heterosexual</b></string>
    <string name="gay"><b>Gay</b></string>
    <string name="lesbian"><b>Lesbian</b></string>
    <string name="bisexual"><b>Bisexual</b></string>
    <string name="other_orientation"><b>Otr@</b></string>
    <string name="kids"><b>Tiene hijos:</b></string>
    <string name="pets"><b>Tiene mascotas:</b></string>
    <string name="smoker_person"><b>Es fumador/@:</b></string>
    <string name="zodiac_sign"><b>Preferencia de signo zodiacal:</b></string>

    <!--Strings Profile-->
    <string name="title_profile"><b>Perfil</b></string>
    <string name="profile_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="profession"><b>Profesión:</b></string>
    <string name="email_profile"><b>Correo:</b></string>
    <string name="password_profile"><b>Contraseña:</b></string>
    <string name="date_birth_profile"><b>Fecha de nacimiento:</b></string>
    <string name="gender_profile"><b>Género:</b></string>
    <string name="location_profile"><b>Ubicación:</b></string>
    <string name="description"><b>Descripción:</b></string>
    <string name="edit_data_profile">Editar</string>
    <string name="save_data_profile">Guardar</string>
    <string name="search_location"><b>Quiero ver personas en...</b></string>
    <string name="my_orientation_text"><b>Mi orientación sexual es</b></string>
    <string name="gender_preferences"><b>Mi preferencia de género es</b></string>
    <string name="zodiac_preferences"><b>Preferencia de signo zodiacal</b></string>
    <string name="max_distance"><b>Rango distancia que quiero ver</b></string>
    <string name="max_age"><b>Rango edad que quiero ver</b></string>
    <string name="with_children"><b>¿Con hijos?</b></string>
    <string name="with_pets"><b>¿Con mascotas?</b></string>
    <string name="smoker"><b>¿Que sea fumador?</b></string>
    <string name="upload_photos"><b>Sube tus fotos</b></string>
    <string name="log_out_text">Cerrar sesión</string>
    <string name="kill_account_text">Darme de baja de la app</string>
    <string name="title_interestings"><b>Edita tus intereses</b></string>
    <string name="subtitle_interestings">y deja que sepan lo que te apasiona</string>
    <string name="exclusive_content"><b>Contenido exclusivo</b></string>
    <string name="active_exclusive_content"><b>Activar contenido</b></string>
    <string name="text_exclusive_content">Si te gustaría publicar contenido exclusivo y ganar dinero extra.</string>
    <string name="your_information_is_saved_success">Tu información ha sido guardada <b>exitosamente</b></string>
    <string name="view_content_">Ver contenido</string>
    <string name="no_longer_interested">Ya no me interesa</string>
    <string name="men">Hombre</string>
    <string name="women">Mujer</string>
    <string name="both">Ambos</string>
    <string name="other">Otr@</string>
    <string name="ok">Ok</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="indiferent">Indiferente</string>

    <!--Strings Change Password-->
    <string name="change_password_title"><b>Cambiar contraseña</b></string>
    <string name="current_password"><b>Ingresa tu contraseña actual</b></string>
    <string name="new_password"><b>Escribe tu nueva contraseña</b></string>
    <string name="new_password_confirm"><b>Confirma tu nueva contraseña</b></string>
    <string name="accept"><b>Aceptar</b></string>
    <string name="cancel"><b>Cancelar</b></string>

    <!--Strings Notifications Settings-->
    <string name="title_notifications"><b>Notificaciones</b></string>
    <string name="deactivate_notifications"><b>Desactivar todas</b></string>
    <string name="message_receive_ntf">Cuando me llegue un mensaje</string>
    <string name="match_done_ntf">Cuando haga un match</string>
    <string name="like_received_ntf">Cuando me den \"Me gusta\"</string>
    <string name="cross_with_ntf">Cuando me cruce con alguien con la app</string>
    <string name="notifications_setting">Notificaciones</string>
    <string name="blocked_persons_sett">Personas bloqueadas</string>

    <!--Strings Notifications-->
    <string name="new_message_alert">Tienes un nuevo mensaje de</string>
    <string name="new_match_alert">Hiciste match con</string>
    <string name="new_cross_alert">Te cruzaste con</string>

    <!--Strings Blogs-->
    <string name="title_blog">Historias</string>
    <string name="tell_us_your_history">Cuéntanos tu historia</string>
    <string name="history_1">Top 10 mejores playas</string>
    <string name="history_2">Algo random</string>
    <string name="history_3">Érase una vez...</string>
    <string name="history_4">WTF?</string>
    <string name="write_by">Escrito por Jesica</string>
    <string name="write_in">23/06/2022</string>

    <!--Strings RecoveryPassword-->
    <string name="keep_calm">Tranquil@</string>
    <string name="text_recovery_password">Puedes recuperar tu contraseña ingresando estos datos y luego revisando tu correo electrónico</string>
    <string name="send_new_password">Enviar</string>
    <string name="back_to_login"><u>Volver al login</u></string>

    <!--Strings Register-->

    <string name="name_register">¿Cómo te llamas?</string>
    <string name="lastname_register">¿Cuál es tu apellido?</string>
    <string name="datebirth_register">¿Cuándo naciste?</string>
    <string name="city_register">¿En qué ciudad estás?</string>
    <string name="who_are_you_register">¿Cómo te identificas?</string>
    <string name="nick_name_register">Ingresa un nombre de usuario</string>
    <string name="email_register">Ingresa tu email</string>
    <string name="password_register">Elige una contraseña</string>
    <string name="confirm_password_register">Confirma tu contraseña</string>

    <!--Register 2-->

    <string name="describe_you">Descríbete</string>
    <string name="looking_for">¿Qué estás buscando?</string>
    <string name="whats_your_job">¿A qué te dedicas?</string>
    <string name="integrate_accounts">Integrar mis cuentas</string>

    <!--Register Buttons-->

    <string name="back_button">Volver</string>
    <string name="next_button">Siguiente</string>
    <string name="acept_terms">Acepto los</string>
    <string name="acept_politic">Acepto la</string>
    <string name="link_terms"><u>Términos y condiciones</u></string>
    <string name="link_politics"><u>Política de privacidad</u></string>
    <string name="title_register1">Para crear tu cuenta</string>
    <string name="text_register1">debes ingresar los siguientes datos</string>
    <string name="title_register2">Ahora cuentanos</string>
    <string name="text_register2">un poco más de ti y tus gustos</string>
    <string name="title_register3">Sube tus fotos</string>
    <string name="text_register3">a tu perfil</string>
    <string name="title_register4">Selecciona tus intereses</string>
    <string name="text_register4">y deja que sepan lo que te apasiona</string>
    <string name="create_account_success">Tu cuenta ha sido creada <b>exitosamente</b></string>

    <string name="button_photography">Fotografía</string>
    <string name="button_shopping">Compras</string>
    <string name="button_karaoke">Karaoke</string>
    <string name="button_yoga">Yoga</string>
    <string name="button_cooking">Cocina</string>
    <string name="button_tennis">Tenis</string>
    <string name="button_sports">Deportes</string>
    <string name="button_swimming">Natación</string>
    <string name="button_art">Arte</string>
    <string name="button_travel">Viajar</string>
    <string name="button_extreme">Extremo</string>
    <string name="button_music">Música</string>
    <string name="button_drink">Bebida</string>
    <string name="button_video_games">Videojuegos</string>

</resources>