<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/login_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.LoginActivities"
    android:background="@drawable/background_login">

<!--    <ScrollView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:scrollbars="none">-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:src="@drawable/logo_roush"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/greet_login"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/greet_login2"
            android:textColor="@color/white"
            android:textSize="16dp" />

        <!--Formulario-->
        <EditText
            android:id="@+id/field_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="18dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/border_white_transpatent_round"
            android:hint="@string/hint1"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/field_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="18dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/border_white_transpatent_round"
            android:hint="@string/hint2"
            android:padding="8dp"
            android:textColorHint="@color/white"
            android:textSize="15sp"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="18dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/border_red_round"
            android:padding="10dp"
            android:text="@string/Login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <!--Forgot Password-->
        <Button
            android:id="@+id/button_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="60dp"
            android:background="@android:color/transparent"
            android:text="@string/forgot_password_link"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp" />
        <!--Make Account-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/dont_have_an_account"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/button_make_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="18dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/border_white_round"
            android:padding="10dp"
            android:text="@string/make_account"
            android:textAllCaps="false"
            android:textColor="@color/red2"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_terms_use"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:background="@android:color/transparent"
                android:padding="4dp"
                android:text="@string/terms"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_privacy_politic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@android:color/transparent"
                android:padding="4dp"
                android:text="@string/politics"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

<!--    </ScrollView>-->
</androidx.constraintlayout.widget.ConstraintLayout>