<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecoveryPassword.RecoveryPasswordActivity"
    android:orientation="vertical"
    android:background="@drawable/background_auth_final">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="260dp"
            android:text="@string/keep_calm"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="60dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/text_recovery_password"
            android:textColor="@color/white"
            android:textSize="16dp" />

        <!--Formulario-->
        <EditText
            android:id="@+id/email_recovery_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="50dp"
            android:layout_gravity="center"
            android:background="@drawable/border_white_transpatent_round"
            android:hint="@string/hint1"
            android:padding="8dp"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"/>

        <Button
            android:id="@+id/button_send_new_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/border_green_white_round"
            android:padding="10dp"
            android:text="@string/send_new_password"
            android:textStyle="bold"
            android:textSize="18dp"
            android:textAllCaps="false"
            android:textColor="@color/green4" />

        <!--Back to login-->
        <Button
            android:id="@+id/button_back_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:text="@string/back_to_login"
            android:layout_marginTop="24dp"
            android:textSize="15dp"
            android:background="@android:color/transparent"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:layout_gravity="center"/>


    </LinearLayout>

</LinearLayout>