<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LikesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/like_title"
            android:textStyle="bold"
            android:textColor="@color/green4"
            android:textSize="25sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/given_likes"
                android:background="@drawable/border_left_green"
                android:textAllCaps="false"
                android:textSize="14dp"
                android:textColor="@color/white"/>
            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/received_likes"
                android:background="@drawable/border_rigth_white"
                android:textAllCaps="false"
                android:textSize="14dp"
                android:textColor="@color/gray"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="20dp"/>

    </LinearLayout>

</LinearLayout>