<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_match_success"
    tools:context=".MatchSuccess.MatchSuccess">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_marginTop="40dp"
            android:layout_height="300dp">

            <ImageView
                android:id="@+id/image_success_match"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="80dp"
                android:layout_marginBottom="20dp"
                android:rotation="-15"
                android:src="@drawable/photo_main"/>

            <ImageView
                android:layout_width="120dp"
                android:layout_height="150dp"
                android:layout_marginRight="80dp"
                android:layout_gravity="bottom|right"
                android:src="@drawable/on_fire" />

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:text="@string/success_match"
            android:textColor="@color/white"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="45sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:text="@string/success_match_sub"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_gravity="center">

            <Button
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/border_green_white_round"
                android:text="@string/button_chat"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textColor="@color/green4"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/later_button"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/border_green_white"
                android:text="@string/button_later"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>