<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="600dp"
    android:background="@drawable/bg_change_password">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="40dp"
        android:orientation="vertical">


        <ImageButton
            android:id="@+id/close_change_pss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:src="@drawable/x_close_icon"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"/>

        <!--Title-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password_title"
            android:layout_marginVertical="20dp"
            android:textColor="@color/white"
            android:textSize="20sp"/>

        <!--Form-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/current_password"
            android:textColor="@color/white"
            android:textSize="16sp"/>
        <!--Current password-->
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="48dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/border_green_soft_transparent_round">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="4dp"
                android:src="@drawable/icon_password"
                android:padding="8dp"/>
            <EditText
                android:id="@+id/current_password_change"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="*******"
                android:paddingLeft="8dp"
                android:maxLength="20"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:inputType="textPassword"
                android:background="@android:color/transparent"
                android:textSize="14sp"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_password"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <!--Current password-->
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="48dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/border_green_soft_transparent_round">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="4dp"
                android:src="@drawable/icon_password"
                android:padding="8dp"/>
            <EditText
                android:id="@+id/new_password_change"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="*******"
                android:paddingLeft="8dp"
                android:maxLength="20"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:inputType="textPassword"
                android:background="@android:color/transparent"
                android:textSize="14sp"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_password_confirm"
            android:textColor="@color/white"
            android:textSize="16sp"/>

        <!--Current password-->
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="48dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/border_green_soft_transparent_round">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_marginTop="4dp"
                android:layout_marginLeft="4dp"
                android:src="@drawable/icon_password"
                android:padding="8dp"/>
            <EditText
                android:id="@+id/new_confirm_password_change"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="*******"
                android:paddingLeft="8dp"
                android:maxLength="20"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:inputType="textPassword"
                android:background="@android:color/transparent"
                android:textSize="14sp"/>
        </LinearLayout>

        <!--Buttons-->
        <LinearLayout
            android:id="@+id/linearlayout_button_form2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/cancel_button_ch_pss"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:background="@drawable/border_green_white"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/accept_button_ch_pss"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@drawable/border_green_white_round"
                android:text="@string/accept"
                android:textAllCaps="false"
                android:textColor="@color/green4"
                android:textSize="18sp"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>